# rclone_gui

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  notes.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  ci.yml  release.yml
crates/cascade-core/: Cargo.toml
crates/cascade-core/examples/: dry_run_job.rs
crates/cascade-core/src/: assistant.rs  config.rs  error.rs  lib.rs  schedule.rs  settings.rs
crates/cascade-core/src/job/: mod.rs  queue.rs  spec.rs  state.rs
crates/cascade-core/src/logs/: mod.rs
crates/cascade-core/src/process/: mod.rs  progress.rs
crates/cascade-core/src/rclone/: browse.rs  command.rs  config.rs  detect.rs  mod.rs  mount.rs  rcd.rs
crates/cascade-core/src/rsync/: command.rs  detect.rs  mod.rs
crates/cascade-core/src/security/: destructive.rs  flags.rs  mod.rs  path.rs  sanitize.rs
crates/cascade-core/src/storage/: mod.rs  repo.rs  schema.rs
crates/cascade-core/tests/: end_to_end.rs
crates/cascade-gui/: Cargo.toml
crates/cascade-gui/src/: app.rs  ctx.rs  i18n.rs  main.rs  window.rs
crates/cascade-gui/src/views/: add_remote.rs  assistant.rs  dashboard.rs  history.rs  job_details.rs  mod.rs  mounts.rs  new_job.rs  profiles.rs  queue.rs  remote_browser.rs  schedule.rs  settings.rs
docs/: ARCHITECTURE.md  ROADMAP.md  SCHEMA.md  THREAT_MODEL.md  capture-screenshots.sh
packaging/: install-local.sh  io.github.alexmihai.Cascade.desktop  io.github.alexmihai.Cascade.metainfo.xml
packaging/flatpak/: io.github.alexmihai.Cascade.yml
po/: build-mo.sh  cascade.pot  extract.sh  ro.po
