[package]
name = "cascade-core"
description = "GTK-free business logic for Cascade: command builders, process runner, storage, security."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
async-channel.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
regex = "1"
directories = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["rt", "process", "io-util", "sync", "macros", "time"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "process", "io-util", "time"] }
