[package]
name = "cascade-gui"
description = "Native GTK4 / libadwaita GUI for rclone and rsync."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "cascade"
path = "src/main.rs"

[dependencies]
cascade-core = { path = "../cascade-core" }
async-channel.workspace = true
serde_json.workspace = true
# gtk4-rs stack. Version features are picked once GTK4 dev libs are installed;
# Ubuntu 26.04 ships a recent GTK4, so v4_12 is a safe floor.
gtk = { package = "gtk4", version = "0.9", features = ["v4_12"] }
adw = { package = "libadwaita", version = "0.7", features = ["v1_5"] }
glib = "0.20"
